# retail_skypro

./: README.md  manage.py  pyproject.toml
retail/migrations/: 0002_rename_supplier_retail_provision.py
retail_skypro/: asgi.py  settings.py  urls.py  wsgi.py
users/: utils.py
